tests/baselines/reference/checkMergedGlobalUMDSymbol.errors.txt
global.d.ts(6,16): error TS2403: Subsequent variable declarations must have the same type.  Variable 'THREE' must be of type 'typeof import("global")', but here has type 'typeof import("three")'.


==== three.d.ts (0 errors) ====
    export namespace THREE {
      export class Vector2 {}
    }
    
==== global.d.ts (1 errors) ====
    import * as _three from './three';
    
    export as namespace THREE;
    
    declare global {
      export const THREE: typeof _three;
                   ~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'THREE' must be of type 'typeof import("global")', but here has type 'typeof import("three")'.
!!! related TS6203 global.d.ts:1:1: 'THREE' was also declared here.
    }
    
==== test.ts (0 errors) ====
    const m = THREE
    